--- a/frontend/travel-app/package.json
+++ b/frontend/travel-app/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-day-picker": "^9.4.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.0.1"
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^7.0.1",
+    "react-toastify": "^11.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
